Backend/envoy-config.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9000 } #1 0.0.0.0

static_resources:
  listeners:
    - name: main-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 } #2 0.0.0.0
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager #envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: Killrvideo
                      domains: ["*"]
                      routes:
                        # - match: { prefix: "/", grpc: {} } # 3a grpc:{} means that requests are only forwarded if they are found in the grpc service definition, returning 404 for others
                        #   route: {
                        #       cluster: grpc-backend-services,
                        #       timeout: { seconds: 60 },
                        #     } #3b
                        - match:
                            prefix: "/killrvideo.comments.CommentsService"
                          route:
                            cluster: grpc-backend-services
                        - match:
                            prefix: "/"
                          route:
                            cluster: frontend-server
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder #envoy.grpc_json_transcoder
                    # configuration docs: https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/http/transcoder/v2/transcoder.proto
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/data/killrvideo_proto_descriptor.pb" #4
                      services: ["killrvideo.comments.CommentsService"] #5
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false #6
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: grpc-backend-services #7
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc-backend-services
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal #dev purposes only
                      port_value: 3000

    - name: frontend-server
      type: logical_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: frontend-server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8001
